src/main/java/com/example/banklib/error/exception/CoreBankingException.java
package com.example.banklib.error.exception;

public class CoreBankingException extends RuntimeException {
    public CoreBankingException(String message) {
        super(message);
    }
}